--- a/frontend/src/app/shared/faculty-schedule-timetable/faculty-schedule-timetable.component.scss
+++ b/frontend/src/app/shared/faculty-schedule-timetable/faculty-schedule-timetable.component.scss
@@ -1,5 +1,6 @@
-@use "sass:list";
-@use "../../../styles/mixins";
+@use 'sass:list';
+@use '../../../styles/mixins';
+@use '../../../styles/breakpoints.scss' as bp;
 
 $day-colors: (
   monday: (
@@ -61,15 +62,41 @@ $day-colors: (
     width: 100%;
     overflow-y: auto;
 
-    .export-fab {
-        position: absolute;
-        right: var(--spacing-lg);
-        bottom: var(--spacing-lg);
-        z-index: 100;
-        color: white;
-        background-color: var(--primary-one);
-        transform-origin: center;
+    .export-pdf-fab {
+      position: absolute;
+      right: var(--spacing-lg);
+      bottom: var(--spacing-lg);
+      z-index: 100;
+      color: white;
+      background-color: var(--primary-one);
+      transform-origin: center;
+      overflow: hidden;
+      min-width: 56px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .fab-label {
+        display: inline-block;
+        text-wrap: nowrap;
+        opacity: 0;
+        width: 0;
+        visibility: hidden;
       }
+
+      &.mat-mdc-extended-fab {
+        .fab-label {
+          opacity: 1;
+          width: auto;
+          visibility: visible;
+        }
+      }
+
+      .fab-icon {
+        display: inline-flex;
+        align-items: center;
+      }
+    }
   }
 
   .faculty-schedule-timetable-table {
@@ -104,8 +131,8 @@ $day-colors: (
         padding: 0;
         border-bottom: 1px solid var(--neutral-fade);
         border-right: 1px solid var(--neutral-fade);
-        min-width: 5rem;
-        max-width: 5rem;
+        min-width: 10rem;
+        max-width: 10rem;
         height: 1.5rem;
         position: relative;
       }
@@ -118,14 +145,14 @@ $day-colors: (
         @include mixins.default-transition;
         font-weight: 500;
         border-right: 1px solid var(--neutral-fade);
-        background-color: var(--neutral-space);
+        background-color: var(--neutral-light);
         z-index: 1;
         padding: var(--spacing-xxxs);
+        min-width: 5rem !important;
+        max-width: 5rem !important;
       }
 
       .schedule-cell {
-        max-width: 6rem;
-        min-width: 6rem;
         position: relative;
 
         &.schedule-block-start {
@@ -159,7 +186,6 @@ $day-colors: (
 
             padding-bottom: var(--spacing-sm);
 
-            // Make content container take full width
             > div {
               width: 100%;
               text-align: center;
@@ -182,11 +208,11 @@ $day-colors: (
           }
         }
 
-        &[style*="background-color"] {
+        &[style*='background-color'] {
           border-bottom: none;
           border-top: none;
 
-          & + .schedule-cell[style*="background-color"] {
+          & + .schedule-cell[style*='background-color'] {
             border-left: none;
           }
         }
