--- a/frontend/src/app/shared/dialog-schedule-history/dialog-schedule-history.component.scss
+++ b/frontend/src/app/shared/dialog-schedule-history/dialog-schedule-history.component.scss
@@ -72,7 +72,7 @@
   }
 }
 
-@media screen and (max-width: bp.$breakpoint-sm) {
+@media screen and (max-width: bp.$breakpoint-md) {
   .dialog-header {
     flex-direction: column;
     gap: var(--spacing-xs);
