--- a/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.scss
+++ b/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.scss
@@ -1,4 +1,5 @@
-@use "../../../styles/mixins";
+@use '../../../styles/mixins';
+@use '../../../styles/breakpoints.scss' as bp;
 
 .dialog-view-schedule-container {
   @include mixins.flex-layout(
@@ -9,6 +10,10 @@
   );
   padding: var(--spacing-lg);
   height: 100%;
+}
+
+.pdf-warning {
+  display: none;
 }
 
 .entity-info {
@@ -80,5 +85,29 @@ iframe {
   @include mixins.flex-layout($justify: flex-end, $gap: var(--spacing-sm));
   .close-button {
     color: var(--primary-text);
+  }
+}
+
+@media screen and (max-width: bp.$breakpoint-md) {
+  .pdf-warning {
+    @include mixins.flex-layout($gap: var(--spacing-xs));
+    background-color: var(--primary-fade);
+    border-radius: var(--border-radius-md);
+    padding: var(--spacing-xs);
+
+    .warning-text {
+      font-size: var(--font-size-sm);
+    }
+
+    .warning-icon,
+    .warning-text {
+      color: var(--primary-text);
+    }
+  }
+}
+
+@media screen and (max-width: bp.$breakpoint-sm) {
+  iframe {
+    max-height: 30vh;
   }
 }
