--- a/frontend/src/app/core/components/faculty/faculty-main/faculty-main.component.scss
+++ b/frontend/src/app/core/components/faculty/faculty-main/faculty-main.component.scss
@@ -11,7 +11,7 @@
     $direction: column,
     $align: none,
     $justify: none,
-    $gap: var(--spacing-xl)
+    $gap: var(--spacing-lg)
   );
   height: 100%;
   box-sizing: border-box;
@@ -488,7 +488,7 @@
   }
 
   .faculty-main-content {
-    padding-bottom: 4.5rem;
+    padding-bottom: 4rem;
   }
 
   .mobile-navbar {
@@ -571,13 +571,13 @@
     transform: scale(1.05) rotate(0deg);
   }
   100% {
-    transform: scale(1.05) rotate(720deg);
+    transform: scale(1.05) rotate(360deg);
   }
 }
 
 @keyframes settings-rotate-counterclockwise {
   0% {
-    transform: scale(1.05) rotate(720deg);
+    transform: scale(1.05) rotate(360deg);
   }
   100% {
     transform: scale(1.05) rotate(0deg);
