--- a/frontend/src/app/shared/table-header/table-header.component.html
+++ b/frontend/src/app/shared/table-header/table-header.component.html
@@ -5,15 +5,13 @@
     <mat-form-field
       appearance="fill"
       class="search-field"
-      subscriptSizing="dynamic"
-    >
+      subscriptSizing="dynamic">
       <mat-label>{{ field.label }}</mat-label>
       <input
         maxlength="50"
         matInput
         [formControlName]="field.key"
-        [placeholder]="field.placeholder || ''"
-      />
+        [placeholder]="field.placeholder || ''" />
       <mat-icon matPrefix>search</mat-icon>
       @if (form.get(field.key)?.value && form.get(field.key)?.value.length > 0)
       {
@@ -33,8 +31,7 @@
         'sections-field': field.key === 'section',
         'academic-year-field': field.key === 'academicYear'
       }"
-      subscriptSizing="dynamic"
-    >
+      subscriptSizing="dynamic">
       <mat-label>{{ field.label }}</mat-label>
       <mat-select [formControlName]="field.key">
         @if (field.key === 'academicYear') {
@@ -56,8 +53,7 @@
       class="active-year-sem-container pop"
       (click)="onActiveYearSemClick()"
       [matTooltip]="'View and set active academic year and semester'"
-      matRipple
-    >
+      matRipple>
       <p class="text">A.Y. {{ activeYear }}, {{ activeSemester }}</p>
       <p class="label">Active Year & Semester</p>
     </div>
@@ -69,14 +65,16 @@
   <div class="button-container">
     <!-- Export to PDF Button -->
     @if (showExportButton) {
-    <span [matTooltip]="tooltipMessage" [matTooltipDisabled]="!buttonDisabled">
+    <span
+      class="tooltip-container"
+      [matTooltip]="tooltipMessage"
+      [matTooltipDisabled]="!buttonDisabled">
       <button
         mat-flat-button
         class="ter-ripple custom-mat-button export-button"
         (click)="onExport()"
         [disabled]="buttonDisabled"
-        [ngClass]="{ 'disabled-button': buttonDisabled }"
-      >
+        [ngClass]="{ 'disabled-button': buttonDisabled }">
         <mat-icon>picture_as_pdf</mat-icon>
         Export to PDF
       </button>
@@ -90,8 +88,7 @@
       class="custom-mat-button add-button"
       [disabled]="buttonDisabled"
       [ngClass]="{ 'disabled-button': buttonDisabled }"
-      (click)="onAdd()"
-    >
+      (click)="onAdd()">
       <div class="button-wrapper">
         @if (isLoading) {
         <mat-spinner class="custom-spinner" diameter="25"></mat-spinner>
